apps/bot-motivation/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bot-motivation
  labels:
    app.kubernetes.io/name: bot-motivation
    app.kubernetes.io/part-of: workload-2
