apps/bot-motivation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot-motivation
  namespace: bot-motivation
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /health
    prometheus.io/port: "8080"
  labels:
    app.kubernetes.io/name: bot-motivation
    app.kubernetes.io/part-of: workload-2
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bot-motivation
  ports:
    - name: http
      port: 80
      targetPort: http
